--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,16 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>1.0.1.RELEASE</version>
 		</dependency>
+		
+		<!-- for convert MD5 -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.9</version>
+		</dependency>
+
+
+
 
 		<!-- Apache Tiles -->
 		<dependency>
