--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,28 @@
 			<artifactId>tiles-template</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+		
+<!-- http://mvnrepository.com/artifact/com.sun.jersey/jersey-core -->
+<dependency>
+    <groupId>com.sun.jersey</groupId>
+    <artifactId>jersey-core</artifactId>
+    <version>1.19.1</version>
+</dependency>
+
+<!-- http://mvnrepository.com/artifact/com.sun.jersey/jersey-client -->
+<dependency>
+    <groupId>com.sun.jersey</groupId>
+    <artifactId>jersey-client</artifactId>
+    <version>1.19.1</version>
+</dependency>
+
+<!-- http://mvnrepository.com/artifact/com.sun.jersey.contribs/jersey-multipart -->
+<dependency>
+    <groupId>com.sun.jersey.contribs</groupId>
+    <artifactId>jersey-multipart</artifactId>
+    <version>1.19.1</version>
+</dependency>
+
 
 		<!-- Spring security -->
 		<dependency>
