Autowire job dependencies.

--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,14 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.9</version>
 		</dependency>
-
+		
+		<!-- Guava -->
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>19.0</version>
+		</dependency>
 
 		<!-- The Scheduler launch java code -->
 		<!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
