--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://node35769-env-8372885.mycloud.by/network
+jdbc.url=jdbc:mysql://localhost:3306/network
 jdbc.username=root
-jdbc.password=TNPean74228
+jdbc.password=0000
