--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
@@ -50,6 +50,14 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+
+		<!-- Fluent HTTP Client -->
+		<dependency>
+			<groupId>com.jcabi</groupId>
+			<artifactId>jcabi-http</artifactId>
+			<version>1.16</version>
+		</dependency>
+		
 		<!--MySQL -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -84,6 +92,9 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>1.0.1.RELEASE</version>
 		</dependency>
+
+
+
 
 		<!-- for convert MD5 -->
 		<dependency>
@@ -195,6 +206,22 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.5.3</version>
 		</dependency>
+
+
+		<!-- Java Mail API -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.3</version>
+		</dependency>
+
+		<!-- Velocity -->
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+		</dependency>
+
 
 		<!-- AspectJ -->
 		<dependency>
