--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,14 @@
 			<artifactId>jcabi-http</artifactId>
 			<version>1.16</version>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/javax.ws.rs/jsr311-api -->
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>jsr311-api</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
+
 		<!--MySQL -->
 		<dependency>
 			<groupId>mysql</groupId>
